// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chain tx 1`] = `
Object {
  "accounts": Object {
    "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8": Object {
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "balance": -2795029n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "_this_address",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/lib/example_contracts/chain.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
      ],
    },
    "0xa56193e39780d268b02bf5d9387179cc7ac9884b": Object {
      "address": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "balance": 999999998018739n,
      "smartContracts": Array [
        "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      ],
      "transactions": Array [
        "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
        "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6",
      ],
    },
  },
  "blockNumber": 0,
  "blocks": Array [],
  "currentBlock": Array [
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
    "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6",
  ],
  "events": Object {
    "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c04e7836a26c52f42241c16b4f": Object {
      "_eventname": "Part1",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [],
    },
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627": Object {
      "_eventname": "Part2",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [],
    },
    "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082": Object {
      "_eventname": "Part4",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [],
    },
    "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029": Object {
      "_eventname": "Part3",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [],
    },
  },
  "transactions": Object {
    "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6": Object {
      "ID": "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c04e7836a26c52f42241c16b4f",
          "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
          "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029",
          "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
        ],
      },
      "nonce": "2",
      "receipt": Object {
        "cumulative_gas": "1120",
        "epoch_num": "1",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5": Object {
      "ID": "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      },
      "nonce": "1",
      "receipt": Object {
        "cumulative_gas": "990994",
        "epoch_num": "0",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
  },
}
`;

exports[`should deploy contract correctly 1`] = `
Object {
  "accounts": Object {
    "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8": Object {
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "balance": 0n,
      "code": "scilla_version 0

(* HelloWorld contract *)

import ListUtils

(***************************************************)
(*               Associated library                *)
(***************************************************)
library HelloWorld

let one_msg = 
  fun (msg : Message) => 
  let nil_msg = Nil {Message} in
  Cons {Message} msg nil_msg
  
let not_owner_code = Int32 1
let set_hello_code = Int32 2

(***************************************************)
(*             The contract definition             *)
(***************************************************)

contract HelloWorld
(owner: ByStr20)

field welcome_msg : String = \\"\\"

transition setHello (msg : String)
  is_owner = builtin eq owner _sender;
  match is_owner with
  | False =>
    e = {_eventname : \\"setHello()\\"; code : not_owner_code};
    event e
  | True =>
    welcome_msg := msg;
    e = {_eventname : \\"setHello()\\"; code : set_hello_code};
    event e
  end
end


transition getHello ()
    r <- welcome_msg;
    e = {_eventname: \\"getHello()\\"; msg: r};
    event e
end

transition multipleMsgs()
  msg1 = {_tag : \\"\\"; _recipient : _sender; _amount : Uint128 0};
  msg2 = {_tag : \\"\\"; _recipient : _sender; _amount : Uint128 0};
  msgs1 = one_msg msg1;
  msgs2 = Cons {Message} msg2 msgs1;
  send msgs2
end

transition contrAddr()
  msg1 = {_eventname : \\"ContractAddress\\"; addr : _this_address };
  event msg1
end
",
      "init": Array [
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "owner",
        },
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "_this_address",
        },
      ],
      "input": undefined,
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
      ],
    },
    "0xa56193e39780d268b02bf5d9387179cc7ac9884b": Object {
      "address": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "balance": 999999999008262n,
      "smartContracts": Array [
        "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      ],
      "transactions": Array [
        "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      ],
    },
  },
  "blockNumber": 0,
  "blocks": Array [],
  "currentBlock": Array [
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
  ],
  "events": Object {},
  "transactions": Object {
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5": Object {
      "ID": "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      },
      "nonce": "1",
      "receipt": Object {
        "cumulative_gas": "991738",
        "epoch_num": "0",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
  },
}
`;

exports[`should deploy contract correctly 2`] = `
Object {
  "accounts": Object {
    "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8": Object {
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "balance": 0n,
      "code": "scilla_version 0

(* HelloWorld contract *)

import ListUtils

(***************************************************)
(*               Associated library                *)
(***************************************************)
library HelloWorld

let one_msg = 
  fun (msg : Message) => 
  let nil_msg = Nil {Message} in
  Cons {Message} msg nil_msg
  
let not_owner_code = Int32 1
let set_hello_code = Int32 2

(***************************************************)
(*             The contract definition             *)
(***************************************************)

contract HelloWorld
(owner: ByStr20)

field welcome_msg : String = \\"\\"

transition setHello (msg : String)
  is_owner = builtin eq owner _sender;
  match is_owner with
  | False =>
    e = {_eventname : \\"setHello()\\"; code : not_owner_code};
    event e
  | True =>
    welcome_msg := msg;
    e = {_eventname : \\"setHello()\\"; code : set_hello_code};
    event e
  end
end


transition getHello ()
    r <- welcome_msg;
    e = {_eventname: \\"getHello()\\"; msg: r};
    event e
end

transition multipleMsgs()
  msg1 = {_tag : \\"\\"; _recipient : _sender; _amount : Uint128 0};
  msg2 = {_tag : \\"\\"; _recipient : _sender; _amount : Uint128 0};
  msgs1 = one_msg msg1;
  msgs2 = Cons {Message} msg2 msgs1;
  send msgs2
end

transition contrAddr()
  msg1 = {_eventname : \\"ContractAddress\\"; addr : _this_address };
  event msg1
end
",
      "init": Array [
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "owner",
        },
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "_this_address",
        },
      ],
      "input": undefined,
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
      ],
    },
    "0xa56193e39780d268b02bf5d9387179cc7ac9884b": Object {
      "address": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "balance": 999999999008262n,
      "smartContracts": Array [
        "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      ],
      "transactions": Array [
        "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      ],
    },
  },
  "blockNumber": 0,
  "blocks": Array [],
  "currentBlock": Array [
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
  ],
  "events": Object {},
  "transactions": Object {
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5": Object {
      "ID": "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      },
      "nonce": "1",
      "receipt": Object {
        "cumulative_gas": "991738",
        "epoch_num": "0",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
  },
}
`;
